# DataAnalysis

./: .getignore  .gitignore  pyproject.toml
modules/m1/: h21.ipynb  m1_1.ipynb  m1_2.ipynb
modules/m2/: m2_1.ipynb  m2_pca.ipynb  m2_review.ipynb
src/: requirements.txt
src/data_analysis/: setup.py
src/data_analysis/analyses/environmental_data/: Correlations.ipynb  Exercises.ipynb  N1.ipynb
src/data_analysis/analyses/high_dimensional_data/: Hyper Parameters.ipynb  Unsupervised Feature Selection.ipynb  Visualization.ipynb  m2p1.ipynb
src/data_analysis/analyses/high_dimensional_data/autograded/: PCA.ipynb  clustering.ipynb  p4.ipynb
src/data_analysis/analyses/networks/: P2 Report Criminal Networks Directed.ipynb  P2 Report Criminal Networks.ipynb  p2_criminal_networks.ipynb
src/data_analysis/analyses/time_series/: BER.ipynb  CPI versus BER.ipynb  CPI.ipynb  TIme Series.ipynb  The Mauna Loa CO_2 Concentration.ipynb
src/data_analysis/config/: __init__.py  env.json
src/data_analysis/utilities/: __init__.py  json.py
